# tibetan-spirit-operations

./: .env.example  .gitignore  BUILD-PLAN.md  CLAUDE.md  DEV-PLAN.md  HANDOFF-002.md  HANDOFF.md  ORG.md  README.md  SYSTEM-STATUS.md  pyproject.toml
.claude/: budget.json  settings.json
.claude/agents/: catalog-curator.md  catalog-curator.metadata.json  cs-drafter.md  cs-drafter.metadata.json  finance-analyst.md  finance-analyst.metadata.json  fulfillment-manager.md  inventory-analyst.md  (+4 more)
agents/: catalog-curator.md  cs-drafter.md  finance-analyst.md  fulfillment-manager.md  inventory-analyst.md  marketing-strategist.md
data/: cost-log.jsonl
docs/: AGENT-BACKLOG.md  ARCHITECTURE.md  CHANGELOG.md  COMMANDS.md  OPERATIONS-REFERENCE.md  ROADMAP.md
rules/: category-judgment.md  cs-judgment.md  ecommerce-judgment.md  finance-judgment.md  operations-protocols.md  org-roles.md
scripts/: _apply_sanitize.py  backfill_shopify.py  import_orders_csv.py  lookup-order.py  publish-plugin.sh  seed_cogs_from_model.py  shopify_query.py  shopify_token_capture.py  test_shopify_connection.py  update_cogs_from_spreadsheet.py  validate_cross_refs.py  validate_schema.py  validate_skill.py
server/: .env.example  Dockerfile  requirements.txt  server.py
tests/: conftest.py  test_claude_client.py  test_cost_tracker.py  test_dashboard_ops.py  test_financial_model.py  test_logging_utils.py  test_model_v7.py  test_model_v8.py  test_notifications.py  test_notion_ops.py  test_org.py  test_server.py  test_supabase_client.py  test_views.py
workspace/: phase1-assessment.md  server-audit.md
(+370 files in other folders)
